# FINAL-cs246

./: README.md  folder.json  main.py  pyproject.toml  temp.txt  testing.py
services/: route_func.py
templates/: main.html
